text added for sections 1,2&3

--- a/CMM307 Coursework.ipynb
+++ b/CMM307 Coursework.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "## Section 1 - Dataset\n",
     "\n",
-    "(Identify the problem and why an NLP solution is needed. Make reference to the dataset)"
+    "The selected dataset (AG's News Topic Classification Dataset) is a subset of the AG collection of more than 1 million news articles. This dataset contains 127,600 news articles divide into training and testing sets. The articles are categorized into four distinct classes: Business, Science/Technology, Sports & World which then would present a Multi-Class Text Classification problem. The aim of this project is to implement and evaluate different NLP techniques to process unstructured text data to extract meaningful patterns which then can be used to allocate the corresponding topic to news articles."
    ]
   },
   {
@@ -85,7 +85,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "cd3344b7-28d4-4b78-9af9-6373fdecc688",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -175,6 +177,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4e74974e-ba06-4c37-9451-73d2c82941a0",
+   "metadata": {},
+   "source": [
+    "Both datasets contain 3 columns\n",
+    " * Class Index which is our label which we will try to predict\n",
+    " * The title of the article\n",
+    " * The description for the article"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "id": "e48923a8-dc3d-4e9f-b033-0320dc9b4537",
@@ -211,7 +224,9 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "e665ed62-1f37-4fbb-b67d-33addbc893db",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -239,10 +254,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d46e8ee2-a95d-49a1-8c87-fbab557d2f5f",
+   "metadata": {},
+   "source": [
+    "* Number of training samples: 120,000\n",
+    "* Number of test samples: 7,600\n",
+    "\n",
+    "Both train and test sets are balanced in terms of class labels. \n",
+    "Class labels range from 1 - 4, representing the four topics"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "74d5a7c4-d175-45ab-931a-6657e7a7a6d7",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -273,6 +302,53 @@
     "# Check the length of news article descriptions in both train and test sets\n",
     "print(train_df['description'].apply(len).describe())\n",
     "print(test_df['description'].apply(len).describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "1d03afd7-a676-4b4e-9a8d-9b6929bac96b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    120000.000000\n",
+      "mean         42.071508\n",
+      "std          13.569405\n",
+      "min           6.000000\n",
+      "25%          33.000000\n",
+      "50%          41.000000\n",
+      "75%          49.000000\n",
+      "max         115.000000\n",
+      "Name: title, dtype: float64\n",
+      "count    7600.000000\n",
+      "mean       41.882368\n",
+      "std        13.477635\n",
+      "min         6.000000\n",
+      "25%        33.000000\n",
+      "50%        41.000000\n",
+      "75%        49.000000\n",
+      "max        96.000000\n",
+      "Name: title, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the length of news article titless in both train and test sets\n",
+    "print(train_df['title'].apply(len).describe())\n",
+    "print(test_df['title'].apply(len).describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "449caeea-a580-4888-902d-5da1856566d4",
+   "metadata": {},
+   "source": [
+    "All articles contain data in both their title and their description.\n",
+    "\n",
+    "The average length of an article is just below 200 characters. Average lengths for both articles title and description are matched in both test and train sets."
    ]
   },
   {
@@ -518,7 +594,9 @@
    "cell_type": "code",
    "execution_count": 34,
    "id": "e5dd912d-0b2f-4238-b0dd-79a70bb02dcd",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -626,9 +704,7 @@
    "id": "8dc2aca2-1bf8-40bd-a5ff-8ae116cd5b8f",
    "metadata": {},
    "source": [
-    "## Section 2 - Representation Learning\n",
-    "\n",
-    "(Write more about the 2 approaches taken for learning representations)"
+    "## Section 2 - Representation Learning"
    ]
   },
   {
@@ -643,7 +719,9 @@
    "cell_type": "code",
    "execution_count": 35,
    "id": "087f2fb7-69d5-43cd-ac65-6f85d974fded",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -690,38 +768,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2d1f1f82-ad5e-4487-afbe-30e7dbe56aa6",
+   "metadata": {},
+   "source": [
+    "**TF-IDF** captures word importance by balancing out their frequency per document and their prevalence across the whole dataset. In the AG's news dataset this can be used to give more weight for topic specific words. \n",
+    "\n",
+    "The TF-IDF pipeline contains:\n",
+    "* CountVectorizer - to convert the pre-processed text into a sparse matrix of token counts, retaining the top 400 most informative terms.\n",
+    "* TfidfTransformer - applies TF-IDF weighting to the token counts to normalize token frequencies and emphasize rare terms."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "86fce369-b041-422f-baad-12ad45a4ba97",
    "metadata": {},
    "source": [
     "### Glove Embeddings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "b03587fc-ae2a-4322-84b9-264b680a8c5f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "class\n",
-      "1    10000\n",
-      "2    10000\n",
-      "4    10000\n",
-      "3     9999\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Create embeddings on a reduced training data\n",
-    "target_size = 40000\n",
-    "test_size = 1 - (target_size / len(train_df))\n",
-    "train_df_reduced, _ = train_test_split(train_df, test_size=test_size, stratify=train_df['class'])\n",
-    "\n",
-    "print(train_df_reduced['class'].value_counts())"
    ]
   },
   {
@@ -792,12 +854,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2b6bae78-16a3-470d-90ba-f7a47463cbc9",
+   "metadata": {},
+   "source": [
+    "For the second Representation Learning approach, pre-trained **Glove embeddings** are used to derive semantic relationships between words from a co-occurence matrix. The embeddings relate to the probabilities that two words appear next to each other. \n",
+    "\n",
+    "In this case we are using a 50 dimensional vector space, where each dimension corresponds to an aspect of the word's meaning and how they might associate to other words in the corpus. \n",
+    "\n",
+    "The training data contains over 50,000 words, each word (if present) is mapped to their corresponding vector representation in the GLOVE 6B 50D embeddings to create the feature set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "955a9c94-1fce-4c37-9491-4d4ffeaa8bc4",
    "metadata": {},
    "source": [
-    "## Section 3 - Baseline Algorithms\n",
-    "\n",
-    "(Write more about the choosen algorithms (kNN & Bidirectional LSTM))"
+    "## Section 3 - Baseline Algorithms"
    ]
   },
   {
@@ -810,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 65,
    "id": "e0a11aa9-e642-4b3b-983c-68ee54d1bc74",
    "metadata": {},
    "outputs": [],
@@ -819,8 +891,20 @@
     "knn_pipeline = Pipeline([\n",
     "    ('count_vectorizer', CountVectorizer(max_features=400)),\n",
     "    ('tfidf_transformer', TfidfTransformer()),  # Transform counts to TF-IDF\n",
-    "    ('knn_classifier', KNeighborsClassifier(n_neighbors=5))\n",
+    "    ('knn_classifier', KNeighborsClassifier(n_neighbors=5, weights='distance', metric='cosine'))\n",
     "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22e238c4-288f-4cf4-85b6-b6ba19e615c1",
+   "metadata": {},
+   "source": [
+    "The first baseline algorithm is the **K-Nearest Neighbor**. \n",
+    "\n",
+    "KNN is an instance-based learning algorithm, to classify a new data point, the classifier identifies the 'k' closest training samples based on a distance metric. \n",
+    "\n",
+    "In this case, the KNN is fed the TF-IDF weighted vector representations. KNN then computes similarity between text samples based on their high-dimensional vector representation using 'cosine' similarity. The weight function has been set to 'distance' to give greater influence in voting to neighbors that are closest to the data point. "
    ]
   },
   {
@@ -908,12 +992,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f110d21d-f2b3-47d2-b0fa-8f51dd1ddfdf",
+   "metadata": {},
+   "source": [
+    "The Bidirectional LSTM model layers require sequences to have consistent lengths. In this case, sequences are padded to match the length of the longest sequence in the training sample. Matching the longest sequence length to avoid information loss such as if we were to truncate input sequences."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "id": "7fcde2ec-91d6-46ab-b50c-fe4d7aab76a9",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1068,6 +1158,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bb65cd70-7df4-44e5-9a07-876218c123d7",
+   "metadata": {},
+   "source": [
+    "For the second algorithm, a Bidirectional Long-Short Term Memory (biLSTM) was selected which processes sequential data in both forward and backward directions. LSTM addresses the vanishing gradient limitation of RNNs. Using memory cells and a gating mechanism to selectively retain or forget information over time, allowing the model to capture long-term dependencies in a sequence. \n",
+    "\n",
+    "biLSTM model structure:\n",
+    "* Embedding layer - the pre-trained vector representation of the vocabulary from Glove embeddings\n",
+    "* Bidirectional LSTM layer - to capture contextual dependencies in both forward and backward directions\n",
+    "* GlobalMaxPooling1D layer - to aggregate the most significant features / strongest activations into a single fixed-size vector.\n",
+    "* Dense layers - sets of connected neurons with 'relu' activation function\n",
+    "* Dropout layers - to prevent overfitting, randomly deactivate 25% of neurons during training\n",
+    "* The final output layer with the 'softmax' activation converts the output to a probability distribution for each class label"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6b1b0be6-aaea-4384-84b3-d7790fa8ec35",
    "metadata": {},
    "source": [
@@ -1119,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 66,
    "id": "ed38aaa8-7977-4776-93bf-3386e2d8f05c",
    "metadata": {},
    "outputs": [
@@ -1129,14 +1235,14 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1       0.78      0.83      0.80      1900\n",
-      "           2       0.77      0.87      0.82      1900\n",
-      "           3       0.81      0.71      0.76      1900\n",
-      "           4       0.78      0.73      0.76      1900\n",
+      "           1       0.83      0.82      0.82      1900\n",
+      "           2       0.82      0.88      0.85      1900\n",
+      "           3       0.82      0.75      0.78      1900\n",
+      "           4       0.77      0.78      0.77      1900\n",
       "\n",
-      "    accuracy                           0.79      7600\n",
-      "   macro avg       0.79      0.79      0.78      7600\n",
-      "weighted avg       0.79      0.79      0.78      7600\n",
+      "    accuracy                           0.81      7600\n",
+      "   macro avg       0.81      0.81      0.81      7600\n",
+      "weighted avg       0.81      0.81      0.81      7600\n",
       "\n"
      ]
     }
